change video width to prevent overlap of comments container

--- a/app/assets/stylesheets/comment.css
+++ b/app/assets/stylesheets/comment.css
@@ -1,6 +1,6 @@
 #video {
   position: relative;
-  width:100%;
+  width:90%;
   height:90%;
   left: 2%;
   top: 5%;
